<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proyecta App</string>
    <string name="app_titulo">Proyecta SAC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_icono">Icono</string>

    <string name="agregar_local">Agregar Local</string>
    <string name="telefono">Teléfono</string>
    <string name="estado">Estado</string>
    <string name="contacto">Contacto</string>
    <string name="direccion">Dirección</string>
    <string name="distrito">Distrito</string>
    <string name="supervisor">Supervisor</string>
    <string name="agregar">Agregar</string>

    <string name="title_activity_agregar_local">Agregar Local</string>
    <string name="title_activity_registro_contacto">Reg. Contacto</string>
    <string name="title_activity_afilicacion_establecimiento">Afiliación de Establecimientos</string>
    <string name="title_activity_registro_venta">Registro de Venta</string>
    <string name="title_activity_miscreditos">Mis Créditos</string>
    <string name="title_activity_buscarproveedor">Establecimientos</string>
    <string name="title_activity_datosproveedor">Establecimiento</string>
    <string name="title_activity_consulta_credito">Consulta de Crédito</string>
    <string name="razon_social">Razón Social</string>
    <string name="ruc">RUC</string>
    <string name="nombre_comercial">Nombre Comercial</string>
    <string name="tipo">Tipo</string>
    <string name="representante">Representante</string>
    <string name="dni">DNI</string>
    <string name="dnirepresentante">DNI Repre.</string>
    <string name="observaciones">Observaciones</string>

    <string name="Agregar_Conyugue">Agregar Conyugue</string>
    <string name="Agregar_GarantePropiedad">Agregar Garante de Propiedad</string>
    <string name="Agregar_GaranteIngresos">Agregar Garante de Ingresos</string>
    <string name="Agregar_ConyugueGP">Agregar Conyugue G. Propiedad</string>
    <string name="Agregar_ConyugueGI">Agregar Conyugue G. Ingresos</string>

    <string name="search_label">Buscar</string>
    <string name="search_hint">Buscar</string>


    <string-array name="list_of_countries">
        <item>USA</item>
        <item>Uk</item>
        <item>United States</item>
        <item>USAD</item>
        <item>Canada</item>
        <item>Australia</item>
        <item>France</item>
        <item>Italy</item>
        <item>China</item>
        <item>Japan</item>
        <item>Spain</item>
    </string-array>
    <string name="title_activity_lista_establecimiento">Establecimientos</string>
    <string name="title_activity_lista_ventas">Listado de Ventas</string>
    <string name="title_activity_detalle">Detalle de la venta</string>
    <string name="guardar">Guardar</string>
    <string name="save_password">Recordar Contraseña</string>
    <string name="locales">Locales</string>
    <string name="local">Local</string>
    <string name="origen">Origen</string>
    <string name="plan">Plan de Trabajo</string>
    <string name="call_center">Call Center</string>
    <string name="technical_support">Soporte técnico</string>
    <string name="establecimientos">Establecimientos</string>
    <string name="title_activity_prueba">prueba</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>


</resources>
